--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,8 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 # ----------------------------------------------------------------------------------------------------------
 spring.profiles.active=local
-jwt.signing.key.secret=mySecret
-jwt.get.token.uri=/authenticate
-jwt.refresh.token.uri=/refresh
-jwt.http.request.header=Authorization
-jwt.token.expiration.in.seconds=604800
-
+# ----------------------------------------------------------------------------------------------------------
+# JASPER
+# ----------------------------------------------------------------------------------------------------------
+invoice.logo.path=/jasper/images/stackextend-logo.png
+invoice.template.path=/jasper/invoice_template.jrxml
