--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+        <bootstrap.version>4.0.0-2</bootstrap.version>
+        <webjars-locator.version>0.30</webjars-locator.version>
+        <lombok.version>1.18.2</lombok.version>
 	</properties>
 
 	<dependencies>
@@ -94,6 +97,18 @@
 			<artifactId>spring-support</artifactId>
 			<version>2.0.8</version>
 		</dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>${bootstrap.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>webjars-locator</artifactId>
+            <version>${webjars-locator.version}</version>
+        </dependency>
 	</dependencies>
 
 	<build>
