--- a/src/main/resources/errorMessages.properties
+++ b/src/main/resources/errorMessages.properties
@@ -7,3 +7,17 @@ typeMismatch={0} contains invalid data.
 
 validation.number.min={0} should have value.
 validation.zipCode.size={0} should be 5 digits.
+
+NotNull=* {0} is a required field
+NotEmpty=* {0} field must have a value
+
+DateTimeFormat.user.dateOfBirth=* {0} should have value with pattern MM/dd/yyyy
+
+Email=* email is a required field (example@example.com)
+
+NotEmpty.user.password=* {0} is a required field
+NotEmpty.user.firstName=* first name is a required field
+NotEmpty.user.lastName=* last name is a required field
+
+NotNull.product.price=* {0} is required with value above 0
+NotNull.product.quantity=* {0} is required with value above 0
