--- a/src/main/resources/errorMessages.properties
+++ b/src/main/resources/errorMessages.properties
@@ -11,6 +11,8 @@ validation.zipCode.size={0} should be 5 digits.
 NotNull=* {0} is a required field
 NotEmpty=* {0} field must have a value
 
+Size.name ={0} number of letters mus be between {2} and {1}
+
 DateTimeFormat.user.dateOfBirth=* {0} should have value with pattern MM/dd/yyyy
 
 Email=* email is a required field (example@example.com)
